# django-htmx-patterns

./: .gitignore  .pre-commit-config.yaml  .replit  LICENSE.rst  README.rst  actions.rst  approach.rst  base_template.rst  django_functest.rst  form_validation.rst  headers.rst  inline_partials.rst  inline_partials_jinja2.rst  modals.rst  posts.rst  pyproject.toml  redirect_after_post.rst  replit.nix  separate_partials.rst  separate_partials_single_view.rst  setup.cfg  view_restart.rst
code/: README.rst  manage.py  pyproject.toml  requirements.txt
code/htmx_patterns/: admin.py  asgi.py  form_renderers.py  form_utils.py  models.py  settings.py  urls.py  utils.py  wsgi.py
code/htmx_patterns/migrations/: 0001_initial.py  0002_alter_monster_name.py  0003_populate.py  0004_monster_date_of_birth_monster_type.py
code/htmx_patterns/static/css/: base_bulma.scss  modals.css  pure_base.css
code/htmx_patterns/static/js/: htmx.min.js  idiomorph-ext-0.0.8.js  modals.js
code/htmx_patterns/templates/: _page_and_paging_controls.html  _toggle_item_partial.html  base.html  base_bulma.html  base_pure.html  form_validation.html  headers.html  home.html  modals_create_monster.html  modals_main.html  multiple_actions.html  paging_with_inline_partials.html  paging_with_inline_partials_improved_lob.html  paging_with_separate_partials.html  post_without_form.html  redirect_after_post.html  simple_post_form.html  toggle_with_separate_partials.html
code/htmx_patterns/views/: __init__.py  actions.py  forms.py  headers.py  modals.py  partials.py  posts.py  redirects.py  restarts.py
(+3 files in other folders)
