[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^4.0"
python = "^3.10"
Faker = "^14.2.0"
django-render-block = "^0.9.1"
ipython = "^8.4.0"
[tool.poetry.dev-dependencies]


[tool.black]
line-length = 120
# required-version = '22.1.0' # see https://github.com/psf/black/issues/2493
target-version = ['py310']


[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
skip = ['settings.py', 'node_modules', '.git', 'venv']
